modal de editar ajustes

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
   <!-- <meta content="text/html;charset=utf-8" http-equiv="Content-Type"> -->
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <title>Aplication de controle de estoque</title>
+  <title>HEXAIT</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="loghexait.ico">
 </head>
 
 <body>
